--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ footer {
 }
 
 .fa:hover {
-  color: #222;
+  color: #444;
 }
 
 .footer-text {
@@ -143,7 +143,7 @@ iframe {
   border: 0;
 }
 
-.mv-button {
+.mv-button, .link-button {
   display: none;
   margin: 1%;
 }
