--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,26 @@ a:hover {
   text-decoration: none;
 }
 
+/* .loading {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  display: block;
+  opacity: 0.7;
+  background-color: #fff;
+  z-index: 99;
+  text-align: center;
+}
+
+.loading-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+} */
+
 .carousel, .mv-list-container, .ateez-social, .content-list-container {
   padding: 0 10%;
 }
@@ -107,6 +127,24 @@ footer {
 .fa {
   color: black;
   margin: 3%;
+}
+
+.social-icon {
+  margin: 2% 3% 4% 3%;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.iconify {
+  margin: 2% 3% 4% 3%;
+  width: 2rem;
+  height: 2rem;
+  color: #000;
+}
+
+.social-icon:hover path, .iconify:hover {
+  color: #444;
+  fill: #444;
 }
 
 .fa:hover {
