--- a/styles.css
+++ b/styles.css
@@ -17,26 +17,6 @@ a:hover {
   text-decoration: none;
 }
 
-/* .loading {
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  position: fixed;
-  display: block;
-  opacity: 0.7;
-  background-color: #fff;
-  z-index: 99;
-  text-align: center;
-}
-
-.loading-image {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 100;
-} */
-
 .carousel, .mv-list-container, .ateez-social, .content-list-container {
   padding: 0 10%;
 }
@@ -170,6 +150,7 @@ footer {
 /* --------------MV--------------------------- */
 iframe {
   margin: 5% 10% 1%;
+  display: none;
 }
 
 .resp-container {
@@ -190,4 +171,12 @@ iframe {
 .mv-button, .link-button {
   display: none;
   margin: 1%;
+}
+
+.spinner-hide {
+  visibility: hidden;
+}
+
+.spinner-border{
+  margin-top: 5%;
 }
